crates/catalog/src/tests/snapshots/information_schema_parameters.snap
---
source: crates/catalog/src/tests/information_schema.rs
description: "SELECT specific_name FROM  embucket.information_schema.parameters\n     GROUP BY specific_name ORDER BY specific_name"
---
+------------------------------------+
| specific_name                      |
+------------------------------------+
| abs                                |
| acos                               |
| acosh                              |
| approx_median                      |
| approx_percentile_cont             |
| approx_percentile_cont_with_weight |
| ascii                              |
| asin                               |
| asinh                              |
| atan                               |
| atan2                              |
| atanh                              |
| avg                                |
| bit_and                            |
| bit_length                         |
| bit_or                             |
| bit_xor                            |
| bool_and                           |
| bool_or                            |
| btrim                              |
| cbrt                               |
| ceil                               |
| char_length                        |
| character_length                   |
| chr                                |
| concat                             |
| concat_ws                          |
| contains                           |
| corr                               |
| cos                                |
| cosh                               |
| cot                                |
| covar                              |
| covar_pop                          |
| covar_samp                         |
| date_bin                           |
| date_format                        |
| date_part                          |
| date_trunc                         |
| datepart                           |
| datetrunc                          |
| decode                             |
| degrees                            |
| digest                             |
| encode                             |
| ends_with                          |
| exp                                |
| factorial                          |
| find_in_set                        |
| floor                              |
| from_unixtime                      |
| gcd                                |
| generate_series                    |
| ifnull                             |
| initcap                            |
| instr                              |
| isnan                              |
| iszero                             |
| lcm                                |
| left                               |
| length                             |
| levenshtein                        |
| ln                                 |
| log                                |
| log10                              |
| log2                               |
| lower                              |
| lpad                               |
| ltrim                              |
| make_date                          |
| make_time                          |
| md5                                |
| mean                               |
| median                             |
| nanvl                              |
| ntile                              |
| nvl                                |
| octet_length                       |
| overlay                            |
| percentile_cont                    |
| position                           |
| pow                                |
| power                              |
| quantile_cont                      |
| radians                            |
| range                              |
| regexp_count                       |
| regexp_instr                       |
| regexp_like                        |
| regexp_match                       |
| regexp_replace                     |
| regexp_substr                      |
| regr_avgx                          |
| regr_avgy                          |
| regr_count                         |
| regr_intercept                     |
| regr_r2                            |
| regr_slope                         |
| regr_sxx                           |
| regr_sxy                           |
| regr_syy                           |
| repeat                             |
| replace                            |
| reverse                            |
| right                              |
| rlike                              |
| round                              |
| rpad                               |
| rtrim                              |
| sha224                             |
| sha256                             |
| sha384                             |
| sha512                             |
| signum                             |
| sin                                |
| sinh                               |
| split_part                         |
| sqrt                               |
| starts_with                        |
| stddev                             |
| stddev_pop                         |
| stddev_samp                        |
| string_agg                         |
| string_to_array                    |
| string_to_list                     |
| strpos                             |
| substr                             |
| substr_index                       |
| substring                          |
| substring_index                    |
| sum                                |
| tan                                |
| tanh                               |
| to_char                            |
| to_hex                             |
| to_local_time                      |
| translate                          |
| trim                               |
| trunc                              |
| upper                              |
| var                                |
| var_pop                            |
| var_population                     |
| var_samp                           |
| var_sample                         |
+------------------------------------+
